--- a/style2.css
+++ b/style2.css
@@ -43,18 +43,18 @@ font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
 text-decoration:none;
 color:#000000;
 margin-bottom:0px;
+border-bottom:dashed 1px;
 }
 
 .topNaviagationLink a:hover
 {
-text-align:center;
-color:#FFFFFF;
+color:#000000;
 display: block;
 width:121px;
 height: 35px;
 line-height: 35px;
 background-image:url(tab.png);
-border-bottom:none;
+
 }
 
 #mainPicture
@@ -62,7 +62,7 @@ border-bottom:none;
 clear:both;
 width:670px;
 height:345px;
-background-color:#000000;
+background-color:#FFFFFF;
 }
 
 #mainPicture .picture
@@ -71,7 +71,6 @@ position:relative;
 width:650px;
 height:325px;
 top:10px;
-margin-left:10px;
 background-image:url(mainImage.jpg);
 background-repeat:no-repeat;
 }
@@ -98,20 +97,19 @@ font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
 
 .contentBox
 {
-margin-top:10px;
+position:relative;
 width:670px;
 height:auto;
-background-color:#000000;
+background-color:#FFFFFF;
+height:auto;
 }
 
 .contentBox .innerBox
 {
 position:relative;
-
 width:650px;
 height:auto;
 top:10px;
-margin-left:10px;
 background-image:url(contentBack.png);
 background-color:#FFFFFF;
 background-repeat:repeat-x;
@@ -130,12 +128,12 @@ color:#1F1603;
 .contentText
 {
 font-size:13px;
-line-height:24px;
+line-height :24px;
 margin-left:13px;
 margin-right:13px;
 }
 
-h4 {
+#footer {
 text-align:center;
 padding-top:30px;
 font-size:9px;
@@ -144,7 +142,7 @@ color:#000000;
 margin:0px;
 }
 
-h4
+#footer a
 {
 text-decoration:none;
 font-size:9px;
@@ -152,8 +150,8 @@ font-size:9px;
 
 a
 {
-color:#484848;
-border-bottom:dotted 1px;
+color:#000000;
+text-decoration:none;
 }
 
 a:hover
@@ -165,7 +163,6 @@ border-bottom:dotted 2px;
 a:visited
 {
 color:#000000;
-
 }
 
 
@@ -182,8 +179,3 @@ blockquote {
 	border:dashed 1px;
 	border-color:#484848;
 }
-
-html, body {
-text-align: center;
-}
-p {text-align: left;}
