--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	text-align: left;
-	font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
+	font-family: 'Nunito', sans-serif;
   font-size: 13px;
 	color: #000000;
 	background: #d6c9f2;
@@ -10,7 +10,7 @@ body {
 }
 *
 {
-  margin: 0 auto 0 auto;
+ margin: 0 auto 0 auto;
  text-align:left;}
 
 #page
@@ -34,7 +34,7 @@ height: 35px;
 line-height: 35px;
 float:left;
 color:#000000;
-font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
 }
 
 
@@ -84,7 +84,7 @@ left:22px;
 text-align: center
 font-size:27px;
 color:#000000;
-font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
 }
 
 #headerSubtext
@@ -95,7 +95,7 @@ left:22px;
 text-align: center;
 font-size:14px;
 color:#484848;
-font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
 }
 
 .contentBox
@@ -141,7 +141,7 @@ h4 {
 text-align:center;
 padding-top:30px;
 font-size:9px;
-font-family:Arial, Helvetica, sans-serif;
+font-family: 'Nunito', sans-serif;
 color:#000000;
 margin:0px;
 }
