--- a/style2.css
+++ b/style2.css
@@ -2,16 +2,17 @@ body {
 	margin: 0;
 	padding: 0;
 	text-align: left;
-	font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
+	font-family: 'Nunito', sans-serif;
 	font-size: 13px;
 	color: #000000;
-	background: #000000 url(background.png);
+	background: #d6c9f2;
 	background-repeat:repeat-x;
 }
 *
 {
-  margin: 0 auto 0 auto;
- text-align:left;}
+ margin: 0 auto 0 auto;
+ text-align:left;
+}
 
 #page
 {
@@ -34,7 +35,7 @@ height: 35px;
 line-height: 35px;
 float:left;
 color:#000000;
-font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
 }
 
 
@@ -82,7 +83,7 @@ top:14px;
 left:22px;
 font-size:27px;
 color:#000000;
-font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
 }
 
 #headerSubtext
@@ -92,7 +93,7 @@ top:12px;
 left:22px;
 font-size:14px;
 color:#484848;
-font-family:"Adobe Garamond Pro Bold", Georgia, "Times New Roman", Times, serif;
+font-family: 'Nunito', sans-serif;
 }
 
 .contentBox
@@ -137,7 +138,7 @@ margin-right:13px;
 text-align:center;
 padding-top:30px;
 font-size:9px;
-font-family:Arial, Helvetica, sans-serif;
+font-family: 'Nunito', sans-serif;
 color:#000000;
 margin:0px;
 }
@@ -173,7 +174,7 @@ blockquote {
 	color:#000000;
 	padding:15px;
 	margin:10px;
-	font-family:Arial, Helvetica, sans-serif;
+	font-family: 'Nunito', sans-serif;
 	background-image:url(blockquote.png);
 	background-repeat:no-repeat;
 	border:dashed 1px;
