--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ font-family: 'Nunito', sans-serif;
 margin-top:10px;
 width:670px;
 height:auto;
-background-color:#d6c9f2;
+background-color:#000000;
 }
 
 .contentBox .innerBox
@@ -115,7 +115,7 @@ height:auto;
 top:10px;
 margin-left:10px;
 background-image:url(contentBack.png);
-background-color:#d6c9f2;
+background-color:#000000;
 background-repeat:repeat-x;
 }
 
