--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ height:auto;
 top:10px;
 margin-left:10px;
 background-image:url(contentBack.png);
-background-color:#000000;
+background-color: white;
 background-repeat:repeat-x;
 }
 
