--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ font-family: 'Nunito', sans-serif;
 margin-top:10px;
 width:670px;
 height:auto;
-background-color:white;
+background-color:#ffffff;
 }
 
 .contentBox .innerBox
@@ -135,7 +135,7 @@ font-size:13px;
 line-height:24px;
 margin-left:13px;
 margin-right:13px;
-background-color: white;
+background-color: #ffffff;
 }
 
 h4 {
